--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,14 @@ dependencies:
   http: ^0.12.0+2
   rxdart: ^0.21.0
   font_awesome_flutter:
+  json_annotation: ^2.4.0
+  shared_preferences: ^0.5.3+4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.0.0
+  json_serializable: ^3.0.0
 
 
 # For information on the generic Dart part of this file, see the
@@ -53,6 +57,20 @@ flutter:
     - assets/images/
     - locale/i18n_en.json
     - locale/i18n_de.json
+
+  fonts:
+    - family: Quicksand
+      fonts:
+        - asset: assets/fonts/Quicksand-Medium.ttf
+          style: normal
+        - asset: assets/fonts/Quicksand_Bold.otf
+          weight: 700
+
+    - family: Raleway
+      fonts:
+        - asset: assets/fonts/Raleway-Regular.ttf
+          style: normal
+        - asset: assets/fonts/Raleway-Medium.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
