--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   shared_preferences: ^0.5.3+4
   flutter_picker:
     git: git://github.com/yangyxd/flutter_picker.git
+  path_provider: any
+  archive: ^2.0.10
 
 dev_dependencies:
   flutter_test:
