--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
     git: git://github.com/yangyxd/flutter_picker.git
   path_provider: any
   archive: ^2.0.10
+  xml: ^3.2.0
 
 dev_dependencies:
   flutter_test:
