--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,7 @@ flutter:
   assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
-    - assets/images/
+    - assets/images/sib_visions.jpg
     - locale/i18n_en.json
     - locale/i18n_de.json
 
