added config for developers + label with is now dependent on parent width

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
     - assets/images/sib_visions.jpg
     - locale/i18n_en.json
     - locale/i18n_de.json
+    - env/conf.json
 
   fonts:
     - family: Quicksand
