added debug property to config + login has gradient + menu drawer shows user and version

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
     - assets/images/sib_visions.jpg
+    - assets/images/sibvisions.png
     - locale/i18n_en.json
     - locale/i18n_de.json
     - env/conf.json
