--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,8 @@ dependencies:
     sdk: flutter
   flutter_cupertino_localizations: ^1.0.1
   cupertino_icons: ^0.1.2
-  http: ^0.12.0+2
+  http_middleware: ^1.0.0
+  http: ^0.11.3+16
   font_awesome_flutter:
   json_annotation: ^2.4.0
   shared_preferences: ^0.5.3+4
