addded flutter picker

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   equatable: ^0.2.0
   intl: ^0.15.8
   keyboard_actions: ^2.1.2
+  file_picker: ^1.4.2
 
 dev_dependencies:
   flutter_test:
