--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   intl: ^0.15.8
   keyboard_actions: ^2.1.2
   file_picker: ^1.4.2
+  image_picker: ^0.6.1+11
 
 dev_dependencies:
   flutter_test:
