--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   keyboard_actions: ^2.1.2
   file_picker: ^1.4.2
   image_picker: ^0.6.1+11
+  package_info: ^0.4.0+11
 
 dev_dependencies:
   flutter_test:
