--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   file_picker: ^1.4.2
   image_picker: ^0.6.1+11
   package_info: ^0.4.0+11
+  flutter_slidable: "^0.5.4"
 
 dev_dependencies:
   flutter_test:
