--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   image_picker: ^0.6.1+11
   package_info: ^0.4.0+11
   flutter_slidable: "^0.5.4"
+  flutter_native_image:
+    git: https://github.com/btastic/flutter_native_image.git
 
 dev_dependencies:
   flutter_test:
