--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,12 +27,12 @@ dependencies:
   bloc: ^0.15.0
   flutter_bloc: ^0.21.0
   equatable: ^0.2.0
-  intl: ^0.15.8
   keyboard_actions: ^2.1.2
   file_picker: ^1.4.2
   image_picker: ^0.6.1+11
   package_info: ^0.4.0+11
   flutter_slidable: "^0.5.4"
+  flutter_barcode_scanner: ^0.1.7
   flutter_native_image:
     git: https://github.com/btastic/flutter_native_image.git
 
