added app config for session timeout

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ flutter:
     - assets/images/sibvisions.png
     - locale/i18n_de.json
     - env/conf.json
+    - env/app.conf.json
 
   fonts:
     - family: Quicksand
