--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_native_image:
     git: https://github.com/btastic/flutter_native_image.git
   connectivity: ^0.4.6+1
+  uuid: ^2.0.4
 
 dev_dependencies:
   flutter_test:
