--- a/.gitignore
+++ b/.gitignore
@@ -73,5 +73,5 @@
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
 # For conf file
-**/env/conf.json
-**/env/app.conf.json
+# **/env/conf.json
+# **/env/app.conf.json
