--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   http_middleware: ^1.0.0
   http: ^0.11.3+16
-  font_awesome_flutter:
+  font_awesome_flutter: ^8.5.0
   json_annotation: ^2.4.0
   shared_preferences: ^0.5.3+4
   flutter_picker: ^1.1.0
