--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,8 @@ dependencies:
   image_picker: ^0.6.1+11
   package_info: ^0.4.0+13
   flutter_slidable: "^0.5.4"
-  flutter_barcode_scanner: 
-    git: git://github.com/AmolGangadhare/flutter_barcode_scanner.git
+  # flutter_barcode_scanner: 
+  #   git: git://github.com/AmolGangadhare/flutter_barcode_scanner.git
   flutter_native_image:
     git: https://github.com/btastic/flutter_native_image.git
   connectivity: ^0.4.6+1
