Updated gitignore ignore vscode folder

--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,13 @@
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
 # For conf file
 **/env/conf.json
 **/env/app.conf.json
