--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   connectivity: ^0.4.6+1
   uuid: ^2.0.4
   sticky_headers: ^0.1.8+1
+  auto_size_text: ^2.1.0
 
 dev_dependencies:
   flutter_test:
