--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   json_annotation: ^2.4.0
   shared_preferences: ^0.5.3+4
   flutter_picker: ^1.1.0
-  path_provider: any
+  path_provider: ^1.6.7
   archive: ^2.0.10
   xml: ^3.2.0 
   gson: ^0.1.2
