--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   image_picker: ^0.6.1+11
   package_info: ^0.4.0+13
   flutter_slidable: "^0.5.4"
+  barcode_scan: ^3.0.1
   # flutter_barcode_scanner: 
   #   git: git://github.com/AmolGangadhare/flutter_barcode_scanner.git
   flutter_native_image:
