--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,11 +17,11 @@ dependencies:
   flutter_widgets: ^0.1.12
   flutter_cupertino_localizations: ^1.0.1
   cupertino_icons: ^0.1.2
-  http_middleware: ^1.0.0
-  http: ^0.11.3+16
+  http: ^0.12.1
   font_awesome_flutter: ^8.5.0
   json_annotation: ^2.4.0
-  shared_preferences: ^0.5.3+4
+  shared_preferences: ^0.5.7+3
+  shared_preferences_web: ^0.1.2+7
   flutter_picker: ^1.1.0
   path_provider: ^1.6.7
   archive: ^2.0.10
@@ -44,6 +44,8 @@ dependencies:
   uuid: ^2.0.4
   sticky_headers: ^0.1.8+1
   auto_size_text: ^2.1.0
+  universal_io: ^1.0.1
+  universal_html: ^1.2.3
 
 dev_dependencies:
   flutter_test:
