--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   uuid: ^2.0.4
   sticky_headers: ^0.1.8+1
   auto_size_text: ^2.1.0
+  tinycolor: ^1.0.2
 
 dev_dependencies:
   flutter_test:
