--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   sticky_headers: ^0.1.8+1
   auto_size_text: ^2.1.0
   tinycolor: ^1.0.2
+  url_launcher: ^5.4.10
 
 dev_dependencies:
   flutter_test:
