--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,8 @@ homepage: https://www.sibvisions.com
 repository: https://github.com/sibvisions/flutterclient.git
 issue_tracker: https://github.com/sibvisions/flutterclient/issues
 
+# Format: version+buildNumber 
+# Increase Build number every AppStore build (even for testing like TestFlight)  
 version: 1.0.0+1
 
 environment:
