--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   auto_size_text: ^2.1.0
   tinycolor: ^1.0.2
   url_launcher: ^5.4.10
+  flutter_swiper : ^1.1.6
 
 dev_dependencies:
   flutter_test:
