--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   universal_io: ^1.0.1
   universal_html: ^1.2.3
   url_launcher: ^5.5.0
+  platform_detect: ^1.4.0
+  device_info: ^0.4.2+4
 
 dev_dependencies:
   flutter_test:
