--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   universal_io: ^1.0.1
   universal_html: ^1.2.3
   url_launcher: ^5.5.0
+  responsive_builder: ^0.2.0+2
 
 dev_dependencies:
   flutter_test:
