Updated deploy script

--- a/package.json
+++ b/package.json
@@ -8,29 +8,22 @@
     "test": "test"
   },
   "scripts": {
+    "increasebuildnumber": "run-s increaseBuildNumberPubspecYaml & run-s increaseBuildNumberAppVersionWebDart",
+    "increasebuildnumberwin": "run-s increaseBuildNumberPubspecYamlWin & run-s increaseBuildNumberAppVersionWebDartWin",
     "increaseBuildNumberPubspecYaml": "perl -i -pe 's/^(version:\\s+\\d+\\.\\d+\\.\\d+\\+)(\\d+)$/$1.($2+1)/e' pubspec.yaml",
     "increaseBuildNumberPubspecYamlWin": "perl -i -pe \"s/^(version:\\s+\\d+\\.\\d+\\.\\d+\\+)(\\d+)$/$1.($2+1)/e\" pubspec.yaml",
     "increaseBuildNumberAppVersionWebDart": "perl -i -pe 's/(build\\s+\\=\\s)(\\d+)/$1.($2+1)/e' lib/utils/app_version_web.dart",
     "increaseBuildNumberAppVersionWebDartWin": "perl -i -pe \"s/(build\\s+\\=\\s)(\\d+)/$1.($2+1)/e\" lib/utils/app_version_web.dart",
     "removeWebBuildConfJson": "del-cli build/web/assets/env/conf.json",
     "removeBuildConfJson": "del-cli build/flutter_assets/env/conf.json'",
-    "cleanupDestFolder": "del-cli deploy",
-    "copyWebBuild": "st-cp build/web/ deploy",
-    "copyBuild": "st-cp 'build/' 'deploy'",
-    "run": "flutter run",
-    "runweb": "flutter run -d chrome",
-    "prebuild": "run-s increaseBuildNumberPubspecYaml & run-s increaseBuildNumberAppVersionWebDart & run-s cleanupDestFolder",
-    "build": "flutter build",
-    "postbuild": "run-s removeBuildConfJson && run-s copyBuild",
-    "prebuildweb": "run-s increaseBuildNumberPubspecYaml & run-s increaseBuildNumberAppVersionWebDart & run-s cleanupDestFolder",
-    "buildweb": "flutter build web",
-    "postbuildweb": "run-s removeWebBuildConfJson && run-s copyWebBuild",
-    "prebuildWin": "run-s increaseBuildNumberPubspecYamlWin & run-s increaseBuildNumberAppVersionWebDartWin & run-s cleanupDestFolder",
-    "buildWin": "flutter build",
-    "postbuildWin": "run-s removeBuildConfJson && run-s copyBuild",
-    "prebuildwebWin": "run-s increaseBuildNumberPubspecYamlWin & run-s increaseBuildNumberAppVersionWebDartWin & run-s cleanupDestFolder",
-    "buildwebWin": "flutter build web",
-    "postbuildwebWin": "run-s removeWebBuildConfJson && run-s copyWebBuild"
+    "copyWebBuild": "del-cli deploy/web && st-cp build/web/ deploy/web",
+    "copyBuildAndroid": "del-cli deploy/android && st-cp build/app/outputs/apk/release deploy/android",
+    "copyBuildIos": "del-cli deploy/ios && st-cp ios deploy/ios",
+    "buildios": "flutter clean && flutter build ios",
+    "buildandroid": "flutter clean && flutter build apk",
+    "postbuildandroid": "run-s removeBuildConfJson && run-s copyBuildAndroid",
+    "buildweb": "flutter clean && flutter build web",
+    "postbuildweb": "run-s removeWebBuildConfJson && run-s copyWebBuild"
   },
   "repository": {
     "type": "git",
