--- a/package.json
+++ b/package.json
@@ -14,16 +14,18 @@
     "increaseBuildNumberPubspecYamlWin": "perl -i -pe \"s/^(version:\\s+\\d+\\.\\d+\\.\\d+\\+)(\\d+)$/$1.($2+1)/e\" pubspec.yaml",
     "increaseBuildNumberAppVersionWebDart": "perl -i -pe 's/(build\\s+\\=\\s)(\\d+)/$1.($2+1)/e' lib/utils/app_version_web.dart",
     "increaseBuildNumberAppVersionWebDartWin": "perl -i -pe \"s/(build\\s+\\=\\s)(\\d+)/$1.($2+1)/e\" lib/utils/app_version_web.dart",
+    "excludeconfigjson": "replace-in-files --string=' - env/conf.json' --replacement=' #- env/conf.json' pubspec.yaml",
+    "includeconfigjson": "replace-in-files --string='#- env/conf.json' --replacement='- env/conf.json' pubspec.yaml",
     "removeWebBuildConfJson": "del-cli build/web/assets/env/conf.json",
     "removeBuildConfJson": "del-cli build/flutter_assets/env/conf.json'",
-    "copyWebBuild": "del-cli deploy/web && st-cp build/web/ deploy/web",
-    "copyBuildAndroid": "del-cli deploy/android && st-cp build/app/outputs/apk/release deploy/android",
+    "copyBuildWeb": "del-cli deploy/web && st-cp build/web deploy/",
+    "copyBuildAndroid": "del-cli deploy/android && st-cp build/app/outputs/apk/release/*.* deploy/android/",
     "copyBuildIos": "del-cli deploy/ios && st-cp ios deploy/ios",
-    "buildios": "flutter clean && flutter build ios",
+    "buildios": "flutter clean && run-s excludeconfigjson && flutter build ios",
     "buildandroid": "flutter clean && flutter build apk",
     "postbuildandroid": "run-s removeBuildConfJson && run-s copyBuildAndroid",
-    "buildweb": "flutter clean && flutter build web",
-    "postbuildweb": "run-s removeWebBuildConfJson && run-s copyWebBuild"
+    "buildweb": "flutter clean && run-s excludeconfigjson && flutter build web",
+    "postbuildweb": "run-s copyBuildWeb && run-s includeconfigjson"
   },
   "repository": {
     "type": "git",
@@ -41,6 +43,7 @@
   },
   "dependencies": {
     "del-cli": "^3.0.1",
+    "replace-in-files-cli": "^0.3.1",
     "st-cp": "^2.0.0-beta.2"
   }
 }
