--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,9 @@ flutter:
   uses-material-design: true
 
   assets:
-    - env/
+    - env/app.conf.json
+    # conf.json is commented out during the deploy process
+    - env/conf.json
     - assets/images/
     - locale/
 
