Update deploy script

--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "increaseBuildNumberAppVersionWebDartWin": "perl -i -pe \"s/(build\\s+\\=\\s)(\\d+)/$1.($2+1)/e\" lib/utils/app_version_web.dart",
     "excludeconfigjson": "replace-in-files --string=' - env/conf.json' --replacement=' #- env/conf.json' pubspec.yaml",
     "includeconfigjson": "replace-in-files --string='#- env/conf.json' --replacement='- env/conf.json' pubspec.yaml",
-    "removeWebBuildConfJson": "del-cli build/web/assets/env/conf.json",
-    "removeBuildConfJson": "del-cli build/flutter_assets/env/conf.json'",
     "copyBuildWeb": "del-cli deploy/web && st-cp build/web deploy/",
     "copyBuildAndroid": "del-cli deploy/android && st-cp build/app/outputs/apk/release/*.* deploy/android/",
     "copyBuildIos": "del-cli deploy/ios && st-cp ios deploy/ios",
-    "buildios": "flutter clean && run-s excludeconfigjson && flutter build ios",
+    "xcodeBuildStep1": "xcodebuild -workspace ios/runner.xcworkspace -scheme Runner -destination generic/platform=iOS build",
+    "xcodeBuildStep2": "xcodebuild -workspace ios/runner.xcworkspace -scheme Runner -sdk iphoneos -configuration AppStoreDistribution archive -archivePath $PWD/deploy/ios/Runner.xcarchive",
+    "xcodeBuildStep3": "xcodebuild -exportArchive -archivePath $PWD/deploy/ios/Runner.xcarchive -exportOptionsPlist ios/exportOptions.plist -exportPath $PWD/deploy/ios",
+    "prebuildios": "del-cli deploy/ios",
+    "buildios": "flutter clean && rm ios/Podfile && run-s excludeconfigjson && flutter build ios && run-s xcodeBuildStep1 && run-s xcodeBuildStep2 && run-s xcodeBuildStep3",
+    "postbuildios": "run-s includeconfigjson && del-cli deploy/ios/Runner.xcarchive",
+    "uploadios": "xcrun altool --upload-app -f deploy/ios/Runner.ipa -u ",
     "buildandroid": "flutter clean && flutter build apk",
     "postbuildandroid": "run-s copyBuildAndroid && run-s includeconfigjson",
     "buildweb": "flutter clean && run-s excludeconfigjson && flutter build web",
