--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "flutterclient",
-    "short_name": "flutterclient",
+    "name": "JVx FlutterClient",
+    "short_name": "FlutterClient",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "JVx FlutterClient.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
