--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "increaseBuildNumberAppVersionJsonWin": "perl -i -pe \"s/(\"version\"\\:\\s+\"\\d+\\.\\d+\\.\\d+\\+)(\\d+)/$1.($2+1)/e\" env/app_version.json",
     "setBuildDate": "perl -MPOSIX -i -pe 's/(\"build_date\"\\:\\s\")(\\X+)(\")/strftime(\"$1%Y-%m-%d$3\", localtime)/e' env/app_version.json",
     "setBuildDateWin": "perl -MPOSIX -i -pe \"s/(\"build_date\"\\:\\s\")(\\X+)(\")/strftime(\"$1%Y-%m-%d$3\", localtime)/e\" env/app_version.json",
-    "excludeconfigjson": "replace-in-files --string=' - env/conf.json' --replacement=' #- env/conf.json' pubspec.yaml",
-    "includeconfigjson": "replace-in-files --string='#- env/conf.json' --replacement='- env/conf.json' pubspec.yaml",
     "copyBuildWeb": "del-cli deploy/web && st-cp build/web deploy/",
     "copyBuildAndroid": "del-cli deploy/android && st-cp build/app/outputs/apk/release/ deploy/android/",
     "copyBuildIos": "del-cli deploy/ios && st-cp ios deploy/ios",
@@ -25,13 +23,13 @@
     "xcodeBuildStep2": "xcodebuild -workspace ios/runner.xcworkspace -scheme Runner -sdk iphoneos -configuration AppStoreDistribution archive -archivePath $PWD/deploy/ios/Runner.xcarchive",
     "xcodeBuildStep3": "xcodebuild -exportArchive -archivePath $PWD/deploy/ios/Runner.xcarchive -exportOptionsPlist ios/exportOptions.plist -exportPath $PWD/deploy/ios",
     "prebuildios": "del-cli deploy/ios",
-    "buildios": "flutter clean && rm ios/Podfile && run-s excludeconfigjson && flutter build ios && run-s xcodeBuildStep1 && run-s xcodeBuildStep2 && run-s xcodeBuildStep3",
-    "postbuildios": "run-s includeconfigjson && del-cli deploy/ios/Runner.xcarchive",
+    "buildios": "flutter clean && rm ios/Podfile && flutter build ios && run-s xcodeBuildStep1 && run-s xcodeBuildStep2 && run-s xcodeBuildStep3",
+    "postbuildios": "el-cli deploy/ios/Runner.xcarchive",
     "uploadios": "xcrun altool --upload-app -f deploy/ios/Runner.ipa -u ",
-    "buildandroid": "flutter clean && run-s excludeconfigjson && flutter build apk",
-    "postbuildandroid": "run-s copyBuildAndroid && run-s includeconfigjson",
-    "buildweb": "flutter clean && run-s excludeconfigjson && flutter build web",
-    "postbuildweb": "run-s copyBuildWeb && run-s includeconfigjson"
+    "buildandroid": "flutter clean && flutter build apk",
+    "postbuildandroid": "run-s copyBuildAndroid",
+    "buildweb": "flutter clean && flutter build web",
+    "postbuildweb": "run-s copyBuildWeb"
   },
   "repository": {
     "type": "git",
