--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "increasebuildnumberwin": "run-s increaseBuildNumberPubspecYamlWin & run-s setBuildDateWin & run-s increaseBuildNumberAppVersionJsonWin",
     "increaseBuildNumberPubspecYaml": "perl -i -pe 's/^(version:\\s+\\d+\\.\\d+\\.\\d+\\+)(\\d+)$/$1.($2+1)/e' pubspec.yaml",
     "increaseBuildNumberPubspecYamlWin": "perl -i -pe \"s/^(version:\\s+\\d+\\.\\d+\\.\\d+\\+)(\\d+)$/$1.($2+1)/e\" pubspec.yaml",
-    "increaseBuildNumberAppVersionJson": "perl -i -pe 's/(\"version\"\\:\\s+\"\\d+\\.\\d+\\.\\d+\\+)(\\d+)/$1.($2+1)/e' env/app_version.json",
-    "increaseBuildNumberAppVersionJsonWin": "perl -i -pe \"s/(\"version\"\\:\\s+\"\\d+\\.\\d+\\.\\d+\\+)(\\d+)/$1.($2+1)/e\" env/app_version.json",
-    "setBuildDate": "perl -MPOSIX -i -pe 's/(\"build_date\"\\:\\s\")(\\X+)(\")/strftime(\"$1%Y-%m-%d$3\", localtime)/e' env/app_version.json",
-    "setBuildDateWin": "perl -MPOSIX -i -pe \"s/(\"build_date\"\\:\\s\")(\\X+)(\")/strftime(\"$1%Y-%m-%d$3\", localtime)/e\" env/app_version.json",
+    "increaseBuildNumberAppVersionJson": "node update_app_version.js version",
+    "increaseBuildNumberAppVersionJsonWin": "node update_app_version.js version",
+    "updateCommitAppVersionJson": "node update_app_version.js commit",
+    "setBuildDate": "node update_app_version.js build_date",
+    "setBuildDateWin": "node update_app_version.js build_date",
     "copyBuildWeb": "del-cli deploy/web && st-cp build/web deploy/",
     "copyBuildAndroid": "del-cli deploy/android && st-cp build/app/outputs/apk/release/ deploy/android/",
     "copyBuildIos": "del-cli deploy/ios && st-cp ios deploy/ios",
