--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   # file_picker: ^2.0.12
   flutter_html: ^1.0.2
   flutter_slidable: ^0.5.7
-  flutter_widgets: ^0.1.12
+  scrollable_positioned_list: ^0.1.8
   # flutter_barcode_scanner: ^1.0.1
   url_launcher: ^5.5.0
   path: ^1.7.0
