--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   path: ^1.7.0
   flutter_google_maps: ^4.0.0
   flutter_map: ^0.10.1+1
+  sqflite: ^1.3.0
+  w_common: ^1.20.3
 
 dev_dependencies:
   flutter_test:
