--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   platform_detect: ^1.4.0
   package_info: ^0.4.3+2
   device_info: ^0.4.2+4
-  connectivity: ^2.0.1
+  # connectivity: ^2.0.1
   http: ^0.12.2
   shared_preferences: ^0.5.12+4
   uuid: ^2.2.2
