--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   flutter_map: ^0.10.1+1
   sqflite: ^1.3.0
   w_common: ^1.20.3
+  encrypt: ^4.1.0
 
 dev_dependencies:
   flutter_test:
