--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,45 +16,44 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  get_it: ^5.0.1
-  xml: ^4.5.1
+  get_it: ^6.0.0
+  xml: ^5.0.2
   flutter_bloc: ^6.0.6
   bloc: ^6.1.0
   platform_detect: ^1.4.0
-  package_info: ^0.4.3+2
-  device_info: ^0.4.2+4
+  package_info: ^2.0.0
+  device_info: ^2.0.0
   # connectivity: ^2.0.1
-  http: ^0.12.2
-  shared_preferences: ^0.5.12+4
+  http: ^0.13.0
+  shared_preferences: ^2.0.0
   uuid: ^2.2.2
   flutter_picker: ^1.1.5
   font_awesome_flutter: ^8.10.0
-  intl: ^0.16.1
+  intl: ^0.17.0
   crypto: ^2.1.5
-  barcode_scan: ^2.0.0
-  path_provider: ^1.6.24
+  barcode_scan: ^3.0.1
+  path_provider: ^2.0.1
   universal_html: ^1.2.3
   archive: ^2.0.13
   auto_size_text: ^2.1.0
   async: ^2.4.2
   tinycolor: ^1.0.2
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.2
   collection: ^1.14.13
   sticky_headers: ^0.1.8+1
   flutter_swiper: ^1.1.6
   flutter_native_image: ^0.0.5+3
-  image_picker: ^0.6.7+12
-  # file_picker: ^2.0.12
+  image_picker: ^0.7.2
+  file_picker: ^3.0.0
   flutter_html: ^1.0.2
   flutter_slidable: ^0.5.7
   scrollable_positioned_list: ^0.1.9
   # flutter_barcode_scanner: ^1.0.1
-  url_launcher: ^5.5.0
+  url_launcher: ^6.0.2
   path: ^1.7.0
-  flutter_google_maps: ^4.0.0
-  flutter_map: ^0.10.1+1
-  sqflite: ^1.3.0
-  w_common: ^1.20.3
+  # flutter_google_maps: ^4.0.0
+  flutter_map: ^0.11.0
+  sqflite: ^2.0.0+2
   encrypt: ^4.1.0
 
 dev_dependencies:
@@ -63,9 +62,6 @@ dev_dependencies:
   flutter_driver:
     sdk: flutter
   mockito: ^4.0.0
-
-# dependency_overrides:
-#   intl: ^0.16.1
 
 flutter:
   uses-material-design: true
