--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   sqflite: ^2.0.0+2
   # w_common: ^1.20.3
   encrypt: ^4.1.0
+  latlong: ^0.6.1
 
 dev_dependencies:
   flutter_test:
