--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   sticky_headers: ^0.2.0
   flutter_html: ^2.0.0-nullsafety.0
   yaml: ^3.1.0
+  sqflite: ^2.0.0+3
+  logging: ^1.0.0
 
 dev_dependencies:
   flutter_test:
