added ci for updating version

--- a/assets/version/app_version.json
+++ b/assets/version/app_version.json
@@ -1,5 +1,1 @@
-{
-    "version": "1.0.0+1",
-    "date": 1616069934691,
-    "commit": "xdxdxdxdxdxd"
-}
+{"version":"1.0.0+3","date":1616069934691,"commit":"eb2b70c6"}
