--- a/.github/workflows/update_version.yaml
+++ b/.github/workflows/update_version.yaml
@@ -1,12 +1,11 @@
-name: Update Version CI
+name: Update Version
 
 on:
   push:
     branches: [master]
-  pull_request: [master]
 
 jobs:
-  run:
+  update-version:
     runs-on: ubuntu-latest
 
     strategy:
@@ -16,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
         with:
-          persistent-credentials: false
+          persist-credentials: false
           fetch-depth: 0
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
@@ -27,7 +26,7 @@ jobs:
       - name: Commit files
         run: |
           git config --local user.email "action@github.com"
-          git config --local user.name "Update Version Action"
+          git config --local user.name "GitHub Action"
           git commit -m "Updated version" -a
       - name: Push changes
         uses: ad-m/github-push-action@master
