--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   yaml: ^3.1.0
   sqflite: ^2.0.0+3
   logging: ^1.0.0
+  scrollable_positioned_list: ^0.2.0-nullsafety.0
+  flutter_slidable: ^0.6.0-nullsafety.0
 
 dev_dependencies:
   flutter_test:
