--- a/android/app/src/debug/AndroidManifest.xml
+++ b/android/app/src/debug/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sibvisions.flutterclient">
 
-    <application android:usesCleartextTraffic="true"/>
+    <application android:usesCleartextTraffic="true" android:requestLegacyExternalStorage="true"/>
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
