--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,5 +41,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Need permission to pick photos from gallery</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Need permision to use camera</string>
 </dict>
 </plist>
