--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   logging: ^1.0.0
   scrollable_positioned_list: ^0.2.0-nullsafety.0
   flutter_slidable: ^0.6.0-nullsafety.0
+  path: ^1.8.0
+  file_picker: ^3.0.0
+  image_picker: ^0.7.3
 
 dev_dependencies:
   flutter_test:
