--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path: ^1.8.0
   file_picker: ^3.0.0
   image_picker: ^0.7.3
+  universal_html: ^2.0.7
 
 dev_dependencies:
   flutter_test:
