--- a/.github/workflows/build_release.yaml
+++ b/.github/workflows/build_release.yaml
@@ -24,7 +24,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm install
-      - run: npm run-script updateVersion
+      - run: npm run-script update-version
       - name: Commit files
         run: |
           git config --local user.email "action@github.com"
@@ -38,6 +38,9 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+
+    needs: [update-version]
+
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-java@v1
@@ -46,9 +49,7 @@ jobs:
 
       - uses: subosito/flutter-action@v1
         with:
-          channel: "beta"
-
-      - run: git pull
+          channel: "stable"
 
       - run: flutter pub get
 
