--- a/.github/workflows/build_release.yaml
+++ b/.github/workflows/build_release.yaml
@@ -15,8 +15,9 @@ jobs:
         node-version: [12.x]
 
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2
         with:
+          ref: feature/2608
           persist-credentials: false
           fetch-depth: 0
       - name: Use Node.js ${{ matrix.node-version }}
