--- a/.github/workflows/build_release.yaml
+++ b/.github/workflows/build_release.yaml
@@ -2,7 +2,7 @@ name: Build Release
 
 on:
   push:
-    branches: [master, feature/2608]
+    branches: [master]
   pull_request:
     branches: [master]
 
