--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,8 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  bloc: ^7.0.0-nullsafety.3
-  flutter_bloc: ^7.0.0-nullsafety.5
+  bloc: ^7.0.0
+  flutter_bloc: ^7.0.0
   http: ^0.13.0
   dartz: ^0.10.0-nullsafety.1
   get_it: ^6.0.0
