--- a/assets/config/app.conf.yaml
+++ b/assets/config/app.conf.yaml
@@ -4,3 +4,7 @@ hideLoginCheckbox: false
 handleSessionTimeout: true
 loginColorsInverted: true
 requestTimeout: 10
+initialConfig:
+  baseUrl: http://192.168.0.80/services/mobile
+  appName: Einkaufsliste
+  appMode: full
