--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
    <uses-permission android:name="android.permission.CAMERA" />
 
    <application
-        android:label="flutterclient"
+        android:label="JVx Mobile"
         android:usesCleartextTraffic="true"
         android:requestLegacyExternalStorage="true"
         android:icon="@mipmap/ic_launcher">
