workflow version fix

--- a/.github/workflows/build_release.yaml
+++ b/.github/workflows/build_release.yaml
@@ -2,7 +2,7 @@ name: Build Release
 
 on:
   push:
-    branches: [master]
+    branches: [master, dev]
   pull_request:
     branches: [master]
 
@@ -77,6 +77,12 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: "stable"
+
+      - name: Pull version file
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git pull
 
       - run: flutter clean
 
