--- a/.github/workflows/build_release.yaml
+++ b/.github/workflows/build_release.yaml
@@ -82,7 +82,7 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git pull
+          git pull origin dev
 
       - run: flutter clean
 
