--- a/android/app/src/debug/AndroidManifest.xml
+++ b/android/app/src/debug/AndroidManifest.xml
@@ -1,6 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sibvisions.flutterclient">
 
+    <queries>
+      <intent>
+        <action android:name="android.media.action.IMAGE_CAPTURE" />
+      </intent>
+    </queries>
+
     <application android:usesCleartextTraffic="true" android:requestLegacyExternalStorage="true"/>
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
