--- a/.github/workflows/build_release.yaml
+++ b/.github/workflows/build_release.yaml
@@ -66,7 +66,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    needs: [update-version]
+    needs: [update-version, test]
 
     steps:
       - uses: actions/checkout@v1
@@ -87,6 +87,8 @@ jobs:
       - run: flutter clean
 
       - run: flutter pub get
+
+      - run: flutter test test/
 
       - run: flutter build apk --release --dart-define=PROD=true --build-name=${{ needs.update-version.outputs.buildName }} --build-number=${{ needs.update-version.outputs.buildNumber }}
 
