--- a/.github/workflows/build_release.yaml
+++ b/.github/workflows/build_release.yaml
@@ -66,7 +66,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    needs: [update-version, test]
+    needs: [update-version]
 
     steps:
       - uses: actions/checkout@v1
