--- a/.github/workflows/build_release.yaml
+++ b/.github/workflows/build_release.yaml
@@ -100,7 +100,7 @@ jobs:
       - run: flutter build apk --release --dart-define=PROD=true --build-name=${{ needs.update-version.outputs.buildName }} --build-number=${{ needs.update-version.outputs.buildNumber }}
         if: matrix.platform == 'android'
 
-      - run: flutter build web --release --dart-define=PROD=true --build-name=${{ needs.update-version.outputs.buildName }} --build-number=${{ needs.update-version.outputs.buildNumber }}
+      - run: flutter build web --release --dart-define=PROD=true
         if: matrix.platform == 'web'
 
       - uses: actions/upload-artifact@v1
