--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   file_picker: ^3.0.0
   image_picker: ^0.7.3
   universal_html: ^2.0.7
+  qr_code_scanner: ^0.4.0
 
 dev_dependencies:
   flutter_test:
