--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   flutter_html: ^2.0.0-nullsafety.0
   yaml: ^3.1.0
   sqflite: ^2.0.0+3
-  logging: ^1.0.0
+  logging: ^1.0.1
   scrollable_positioned_list: ^0.2.0-nullsafety.0
   flutter_slidable: ^0.6.0-nullsafety.0
   path: ^1.8.0
@@ -46,6 +46,11 @@ dependencies:
   image_picker: ^0.7.3
   universal_html: ^2.0.7
   qr_code_scanner: ^0.4.0
+  flutter_map: ^0.12.0
+
+dependency_overrides:
+  quiver: ^3.0.0-nullsafety.3
+  logging: ^1.0.1
 
 dev_dependencies:
   flutter_test:
