--- a/.github/workflows/build_release.yaml
+++ b/.github/workflows/build_release.yaml
@@ -97,7 +97,7 @@ jobs:
       - run: flutter config --enable-web
         if: matrix.platform == 'web'
 
-      - run: flutter build apk --release --no-sound-null-safety --dart-define=PROD=true --build-name=${{ needs.update-version.outputs.buildName }} --build-number=${{ needs.update-version.outputs.buildNumber }}
+      - run: flutter build apk --release --bundle-sksl-path flutter_01.sksl.json --no-sound-null-safety --dart-define=PROD=true --build-name=${{ needs.update-version.outputs.buildName }} --build-number=${{ needs.update-version.outputs.buildNumber }}
         if: matrix.platform == 'android'
 
       - run: flutter build web --release --dart-define=PROD=true
