--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   universal_html: ^2.0.7
   qr_code_scanner: ^0.4.0
   flutter_map: ^0.12.0
+  url_launcher: ^6.0.3
 
 dependency_overrides:
   quiver: ^3.0.0-nullsafety.3
