--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   qr_code_scanner: ^0.4.0
   flutter_map: ^0.12.0
   url_launcher: ^6.0.3
+  flutter_swiper: ^1.1.6
 
 dependency_overrides:
   quiver: ^3.0.0-nullsafety.3
