startup widget fix + settings page bug fix

--- a/.github/workflows/build_release.yaml
+++ b/.github/workflows/build_release.yaml
@@ -92,7 +92,7 @@ jobs:
 
       - run: flutter pub get
 
-      - run: flutter test test/
+      - run: flutter test --no-sound-null-safety test/
 
       - run: flutter config --enable-web
         if: matrix.platform == 'web'
