--- a/assets/config/app.conf.yaml
+++ b/assets/config/app.conf.yaml
@@ -4,3 +4,7 @@ hideLoginCheckbox: false
 handleSessionTimeout: true
 loginColorsInverted: true
 requestTimeout: 10
+initialConfig:
+  baseUrl: https://cloud.sibvisions.com/previewer/services/mobile
+  appName: Previewer
+  appMode: full
