--- a/assets/config/app.conf.yaml
+++ b/assets/config/app.conf.yaml
@@ -8,3 +8,5 @@ initialConfig:
   baseUrl: https://cloud.sibvisions.com/previewer/services/mobile
   appName: Previewer
   appMode: full
+startupParameter:
+  test.parameter: false
