--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_map: ^0.12.0
   url_launcher: ^6.0.3
   flutter_swiper: ^1.1.6
+  signature: ^4.1.1
 
 dependency_overrides:
   quiver: ^3.0.0-nullsafety.3
