--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   flutter_bloc: ^7.0.0
   http: ^0.13.0
   dartz: ^0.10.0-nullsafety.1
-  get_it: ^6.0.0
+  get_it: ^7.1.3
   shared_preferences: ^2.0.4
   encrypt: ^5.0.0-beta.1
   uuid: ^3.0.1
@@ -43,10 +43,10 @@ dependencies:
   flutter_slidable: ^0.6.0-nullsafety.0
   path: ^1.8.0
   file_picker: ^3.0.0
-  image_picker: ^0.7.3
+  image_picker: ^0.8.0+3
   universal_html: ^2.0.7
-  qr_code_scanner: ^0.4.0
-  flutter_map: ^0.12.0
+  qr_code_scanner: ^0.5.1
+  flutter_map: ^0.13.1
   url_launcher: ^6.0.3
   flutter_swiper: ^1.1.6
   signature: ^4.1.1
@@ -54,7 +54,6 @@ dependencies:
   flutter_gauge: ^1.0.8
 
 dependency_overrides:
-  quiver: ^3.0.0-nullsafety.3
   logging: ^1.0.1
 
 dev_dependencies:
