--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   scrollable_positioned_list: ^0.2.0-nullsafety.0
   flutter_slidable: ^0.6.0-nullsafety.0
   path: ^1.8.0
-  file_picker: ^3.0.0
+  file_picker: 3.0.2+2
   image_picker: ^0.8.0+3
   universal_html: ^2.0.7
   qr_code_scanner: ^0.5.1
